--- a/ccs/bookpage.css
+++ b/ccs/bookpage.css
@@ -75,9 +75,10 @@ body, h1, h2, p, input, button {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: bold;
     color: #000;
+    
   }
   
   .profile-circle::after {
@@ -87,8 +88,11 @@ body, h1, h2, p, input, button {
   
 
 .profile p {
-    font-size: 1rem;
+    font-size: 15px;
+    font-family: 'GrandCentral', sans-serif;  /* Apply the GrandCentral font */
     color: #ccc;
+    padding: 15px;
+    align-items: center;
 }
 
 .profile input {
@@ -96,7 +100,7 @@ body, h1, h2, p, input, button {
     font-size: 1rem;
     color: #fff;
     margin-top: 10px;
-    width: 60%;
+    width: 89%;
 }
 
 .profile button {
