--- a/ccs/bookpage.css
+++ b/ccs/bookpage.css
@@ -194,3 +194,6 @@ body, h1, h2, p, input, button {
     background-color: #45a049;
   }
   
+  .chapter-comments.has-comments h3 {
+    color: #4CAF50; /* Green */
+}
